# voice-assistant-demo

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  SOLUTION.md  flake.nix  justfile  pyproject.toml  start.sh
.github/workflows/: ci.yml
docs/brainstorms/: 2026-03-30-12-factor-agent-overhaul-requirements.md  2026-04-01-adk-migration-requirements.md  2026-04-16-persona-scoping-brainstorm.md
docs/plans/: 2026-03-31-001-refactor-12-factor-agent-overhaul-plan.md  2026-04-01-001-refactor-migrate-to-google-adk-plan.md  2026-04-15-001-feat-elevenlabs-voice-backend-plan.md  2026-04-16-001-feat-persona-scoping-velo-demo-plan.md
scripts/: barge_in_smoke_test.py  provision_twilio.py
src/voice_assistant/: __init__.py  __main__.py  agent.py  audio.py  call_handler.py  config.py  gemini_session.py  repl.py  state.py
src/voice_assistant/prompts/: escalation.txt
src/voice_assistant/tools/: __init__.py  end_call.py  weather.py
tests/: test_agent.py  test_audio.py  test_call_handler.py  test_config.py  test_main.py  test_registry.py  test_server.py  test_state.py  test_tools.py  test_tools_adk.py
tests/evals/: goodbye.evalset.json  greeting.evalset.json
tests/integration/: test_barge_in_live.py
tests/unit/: conftest.py  test_agent.py  test_call_handler.py  test_config.py  test_elevenlabs_tts.py  test_persona.py  test_server.py
todos/: 001-complete-p2-stale-audio-after-clear-needs-latch.md  002-complete-p2-replace-getattr-with-direct-access.md  003-complete-p2-add-real-event-test-for-schema-drift.md  004-complete-p2-rate-limit-interrupt-clear.md  005-pending-p2-shorten-verbose-comment-block.md  006-complete-p2-document-farewell-interrupt-ordering.md  007-pending-p1-preexisting-unauth-twilio-websocket.md  008-pending-p3-extract-call-state-machine.md  009-pending-p3-polish-and-minor.md
tools/: README.md  ngrok.py  twilio_helper.py
voice_assistant/: __main__.py  agent.py  app.py  audio.py  call_handler.py  config.py  elevenlabs_tts.py  tools.py  twilio_ops.py
voice_assistant/dev/: __init__.py  ngrok.py  twilio.py  twilio_helper.py
voice_assistant/personas/: velo_shop.yaml
voice_assistant/prompts/: base.txt
voice_assistant/tools/: __init__.py
