[project]
name = "voice-assistant-demo"
version = "0.1.0"
description = "Customer support hotline with Twilio + Google ADK (Gemini Live API)"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=1.28.0",
    "twilio>=9.0.0",
    "audioop-lts>=0.2.1",   # mulaw <-> pcm conversion (Python 3.13+ compatible)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    # silence as long as https://github.com/googleapis/python-genai/pull/1939 is not merged
    "ignore:'_UnionGenericAlias' is deprecated:DeprecationWarning",
]

[tool.setuptools.packages.find]
include = ["voice_assistant*"]

[tool.coverage.run]
source = ["voice_assistant"]

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:"]
skip_covered = true
show_missing = true

[tool.uv]
package = true

[tool.uv.sources]

[dependency-groups]
dev = [
    "google-adk[eval]>=1.28.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.1.1",
]
# (add local/git overrides here if needed)
